--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ project(Dengine)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(Dengine main.cpp WindowAccessors/WindowAccessorX.cpp WindowAccessors/WindowAccessorX.h WindowAccessor.cpp WindowAccessor.h Events/EventManager.cpp Events/EventManager.h Events/EventsHandler.cpp Events/EventsHandler.h)
+add_executable(Dengine main.cpp WindowAccessors/WindowAccessorX.cpp WindowAccessors/WindowAccessorX.h WindowAccessor.cpp WindowAccessor.h Events/EventsManager.cpp Events/EventsManager.h Events/EventsHandler.cpp Events/EventsHandler.h)
 
 find_package(OpenGL REQUIRED)
 include_directories(${OPENGL_INCLUDE_DIR})
