--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ project(Dengine)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(Dengine main.cpp WindowAccessors/WindowAccessorX.cpp WindowAccessors/WindowAccessorX.h WindowAccessors/WindowAccessor.cpp WindowAccessors/WindowAccessor.h Dengine.cpp Dengine.h WindowAccessors/WindowManager.cpp WindowAccessors/WindowManager.h Scene.cpp Scene.h GameObject.cpp GameObject.h Components/Component.cpp Components/Component.h Events/EventsData.cpp Events/EventsData.h Events/MousePosition.cpp Events/MousePosition.h ID.cpp ID.h)
+add_executable(Dengine main.cpp WindowAccessors/WindowAccessorX.cpp WindowAccessors/WindowAccessorX.h WindowAccessors/WindowAccessor.cpp WindowAccessors/WindowAccessor.h Dengine.cpp Dengine.h WindowAccessors/WindowManager.cpp WindowAccessors/WindowManager.h Scene.cpp Scene.h GameObject.cpp GameObject.h Components/Component.cpp Components/Component.h Events/EventsData.cpp Events/EventsData.h Events/MousePosition.cpp Events/MousePosition.h Components/TransformComponent.cpp Components/TransformComponent.h)
 
 find_package(OpenGL REQUIRED)
 include_directories(${OPENGL_INCLUDE_DIR})
