core pre-release works:
+a lot of refactoring
+optimizations
+bugfixes
+Events API and Window API are in refactoring and features adding
+There are no T2DComponent&T3DComponent, only TComponent
+New exceptions
+Vectors is refactored
+Dimensions are removed

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,77 @@ project(Dengine)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(Dengine App/main.cpp Window/WindowAccessorX.cpp Window/WindowAccessorX.h Window/WindowAccessor.h Dengine.cpp Dengine.h Window/WindowManager.cpp Window/WindowManager.h Scene.cpp Scene.h GameObject.cpp GameObject.h Components/Component.h Events/EventsData.cpp Events/EventsData.h Events/MousePosition.cpp Events/MousePosition.h Components/Transform3DComponent.cpp Components/Transform3DComponent.h Exceptions/DengineException.h Exceptions/NoCurrentSceneException.cpp Exceptions/NoCurrentSceneException.h Exceptions/NoSuitableSceneException.cpp Exceptions/NoSuitableSceneException.h Exceptions/CurrentSceneRemovingException.cpp Exceptions/CurrentSceneRemovingException.h Geometry/vector3.cpp Geometry/vector3.h Geometry/vector2.cpp Geometry/vector2.h Geometry/dimension3.cpp Geometry/dimension3.h Geometry/dimension2.cpp Geometry/dimension2.h Geometry/dimensions.h Geometry/Geometry.cpp Geometry/Geometry.h Components/DefaultComponent.cpp Components/DefaultComponent.h ScenesManager.cpp ScenesManager.h Coreutils/ID.h Exceptions/DengineIsNotInitializedException.cpp Exceptions/DengineIsNotInitializedException.h Components/Transform2DComponent.cpp Components/Transform2DComponent.h Exceptions/ComponentIsNotBoundException.cpp Exceptions/ComponentIsNotBoundException.h Exceptions/NoSuitableComponentException.cpp Exceptions/NoSuitableComponentException.h Exceptions/TransformComponentRemovingException.cpp Exceptions/TransformComponentRemovingException.h DObject.h Exceptions/ComponentAlreadyAddedException.cpp Exceptions/ComponentAlreadyAddedException.h Exceptions/NoCastToComponentException.cpp Exceptions/NoCastToComponentException.h DengineAccessor.cpp DengineAccessor.h)
+add_executable(App App/main.cpp)
+
+add_library(Dengine
+        Window/WindowAccessorX.cpp
+        Window/WindowAccessorX.h
+        Window/WindowAccessor.h
+        Window/WindowManager.cpp
+        Window/WindowManager.h
+
+        Dengine.cpp
+        Dengine.h
+        Scene.cpp
+        Scene.h
+        GameObject.cpp
+        GameObject.h
+        ScenesManager.cpp
+        ScenesManager.h
+        DObject.h
+        DengineAccessor.cpp
+        DengineAccessor.h
+
+        Components/Component.h
+        Components/TransformComponent.cpp
+        Components/TransformComponent.h
+        Components/DefaultComponent.cpp
+        Components/DefaultComponent.h
+
+        Events/KeyboardState.h
+        Events/MouseState.h
+        Events/Keyboard.h
+        Events/Keyboard.cpp
+        Events/Mouse.h
+        Events/WindowState.h
+        Events/DefaultMouseState.cpp
+        Events/DefaultMouseState.h
+        Events/DefaultWindowState.cpp
+        Events/DefaultWindowState.h
+        Events/DefaultKeyboardState.cpp
+        Events/DefaultKeyboardState.h
+
+        Exceptions/DengineException.h
+        Exceptions/NoCurrentSceneException.cpp
+        Exceptions/NoCurrentSceneException.h
+        Exceptions/NoSuitableSceneException.cpp
+        Exceptions/NoSuitableSceneException.h
+        Exceptions/CurrentSceneRemovingException.cpp
+        Exceptions/CurrentSceneRemovingException.h
+        Exceptions/DengineIsNotInitializedException.cpp
+        Exceptions/DengineIsNotInitializedException.h
+        Exceptions/ComponentIsNotBoundException.cpp
+        Exceptions/ComponentIsNotBoundException.h
+        Exceptions/NoSuitableComponentException.cpp
+        Exceptions/NoSuitableComponentException.h
+        Exceptions/TransformComponentRemovingException.cpp
+        Exceptions/TransformComponentRemovingException.h
+        Exceptions/ComponentAlreadyAddedException.cpp
+        Exceptions/ComponentAlreadyAddedException.h
+        Exceptions/NoCastToComponentException.cpp
+        Exceptions/NoCastToComponentException.h
+        Exceptions/LessThanVectorException.h
+        Exceptions/LessThanVectorException.cpp
+
+        Geometry/Vector3.cpp
+        Geometry/Vector3.h
+        Geometry/Vector2.cpp
+        Geometry/Vector2.h
+        Geometry/Geometry.cpp
+        Geometry/Geometry.h
+        Geometry/Vector.h
+
+        Coreutils/ID.h)
 
 find_package(OpenGL REQUIRED)
 include_directories(${OPENGL_INCLUDE_DIR})
@@ -13,4 +83,4 @@ include_directories(${X11_INCLUDE_DIR})
 
 find_package (Threads)
 
-target_link_libraries(Dengine ${X11_LIBRARIES} ${OPENGL_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
+target_link_libraries(App Dengine ${X11_LIBRARIES} ${OPENGL_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
