--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,41 +3,44 @@ project(Dengine)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(App src/App/main.cpp)
+add_executable(App App/main.cpp)
 
 add_library(Dengine
-        src/Platform/Window/X/Exceptions/CouldNotOpenXDisplayException.cpp
-        src/Platform/Window/X/Exceptions/CouldNotOpenXDisplayException.h
-        src/Platform/Window/X/Exceptions/NoSuitableXVisualInfoException.cpp
-        src/Platform/Window/X/Exceptions/NoSuitableXVisualInfoException.h
-        src/Platform/Window/X/WindowManagerX.cpp
-        src/Platform/Window/X/WindowManagerX.h
-        src/Platform/Window/WindowManager.h
+        Platform/Window/X/WindowManagerX.cpp
+        Platform/Window/X/WindowManagerX.h
+        Platform/Window/WindowManager.h
 
-        src/Events/Keyboard/KeyboardState.h
-        src/Events/Mouse/MouseState.h
-        src/Events/Keyboard/KeyCode.cpp
-        src/Events/Window/WindowState.h
-        src/Events/Mouse/DefaultMouseState.cpp
-        src/Events/Mouse/DefaultMouseState.h
-        src/Events/Window/DefaultWindowState.cpp
-        src/Events/Window/DefaultWindowState.h
-        src/Events/Keyboard/DefaultKeyboardState.cpp
-        src/Events/Keyboard/DefaultKeyboardState.h
-        src/Events/Keyboard/KeyCode.h
-        src/Events/Keyboard/Key.h
-        src/Events/Keyboard/DKey.cpp
-        src/Events/Keyboard/DKey.h
-        src/Events/Keyboard/KeyByDKeyCodeComparator.cpp
-        src/Events/Keyboard/KeyByDKeyCodeComparator.h
-        src/Events/Keyboard/KeyBySymbolComparator.cpp
-        src/Events/Keyboard/KeyBySymbolComparator.h
+        Events/Keyboard/KeyboardState.h
+        Events/Mouse/MouseState.h
+        Events/Keyboard/KeyCode.cpp
+        Events/Window/WindowState.h
+        Events/Mouse/DefaultMouseState.cpp
+        Events/Mouse/DefaultMouseState.h
+        Events/Window/DefaultWindowState.cpp
+        Events/Window/DefaultWindowState.h
+        Events/Keyboard/DefaultKeyboardState.cpp
+        Events/Keyboard/DefaultKeyboardState.h
+        Events/Keyboard/KeyCode.h
+        Events/Keyboard/Key.h
+        Events/Keyboard/DKey.cpp
+        Events/Keyboard/DKey.h
+        Events/Keyboard/KeyByDKeyCodeComparator.cpp
+        Events/Keyboard/KeyByDKeyCodeComparator.h
+        Events/Keyboard/KeyBySymbolComparator.cpp
+        Events/Keyboard/KeyBySymbolComparator.h
 
-        src/Platform/Window/WindowManager.cpp src/Platform/Window/X/Exceptions/UnableToCreateGLXContextException.cpp src/Platform/Window/X/Exceptions/UnableToCreateGLXContextException.h src/Platform/Window/X/Exceptions/UnableToAttachGLXContextToWindow.cpp src/Platform/Window/X/Exceptions/UnableToAttachGLXContextToWindow.h src/Platform/Window/X/Exceptions/TraySpecificationIsNotSupportedException.cpp src/Platform/Window/X/Exceptions/TraySpecificationIsNotSupportedException.h src/Events/Keyboard/KeyComparator.h src/Events/Mouse/MouseStateBuilder.h src/Events/Mouse/Mouse.h src/Events/Mouse/DefaultMouseStateBuilder.cpp src/Events/Mouse/DefaultMouseStateBuilder.h src/Events/Window/WindowStateBuilder.h src/Events/Window/DefaultWindowStateBuilder.cpp src/Events/Window/DefaultWindowStateBuilder.h
-        src/Events/Keyboard/KeyboardStateBuilder.h
-        src/Events/Keyboard/DefaultKeyboardStateBuilder.h
-        src/Events/Keyboard/DefaultKeyboardStateBuilder.cpp
-        src/Platform/Window/X/Drivers/XKeyboardDriver.h)
+        Platform/Window/WindowManager.cpp Events/Keyboard/KeyComparator.h Events/Mouse/MouseStateBuilder.h Events/Mouse/Mouse.h Events/Mouse/DefaultMouseStateBuilder.cpp Events/Mouse/DefaultMouseStateBuilder.h Events/Window/WindowStateBuilder.h Events/Window/DefaultWindowStateBuilder.cpp Events/Window/DefaultWindowStateBuilder.h
+        Events/Keyboard/KeyboardStateBuilder.h
+        Events/Keyboard/DefaultKeyboardStateBuilder.h
+        Events/Keyboard/DefaultKeyboardStateBuilder.cpp
+        Platform/Window/X/Util/XKeyboardConverter.h
+        Platform/Window/X/Exceptions/XException.cpp
+        Platform/Window/X/Exceptions/XException.h
+        Platform/Window/X/Util/XKeyboardConverter.h
+        Platform/Window/X/Util/XDefaultKeyboardConverter.h
+        Platform/Window/X/Util/XDefaultKeyboardConverter.cpp
+        Exceptions/DengineException.h
+        )
 
 find_package(OpenGL REQUIRED)
 include_directories(${OPENGL_INCLUDE_DIR})
