--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,7 +5,7 @@ set(CMAKE_CXX_STANDARD 17)
 
 add_executable(App App/main.cpp)
 
-add_library(Dengine
+#[[add_library(Dengine
         Platform/Window/X/WindowManagerX.cpp
         Platform/Window/X/WindowManagerX.h
         Platform/Window/WindowManager.h
@@ -41,7 +41,10 @@ add_library(Dengine
         Platform/Window/X/Util/XDefaultKeyboardConverter.cpp
         Exceptions/DengineException.h
         Exceptions/DengineException.cpp
-        Exceptions/IOException.cpp Exceptions/IOException.h)
+        Exceptions/IOException.cpp Exceptions/IOException.h)]]
+
+add_library(PNG Graphics/PNG/PNG.h
+            Graphics/Image.h Graphics/Pixel.h Graphics/DefaultPixel.cpp Graphics/DefaultPixel.h Graphics/DefaultImage.cpp Graphics/DefaultImage.h)
 
 find_package(OpenGL REQUIRED)
 include_directories(${OPENGL_INCLUDE_DIR})
@@ -51,4 +54,4 @@ include_directories(${X11_INCLUDE_DIR})
 
 find_package (Threads)
 
-target_link_libraries(App Dengine ${X11_LIBRARIES} ${OPENGL_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
+target_link_libraries(App PNG ${X11_LIBRARIES} ${OPENGL_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
