--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -67,11 +67,9 @@ add_library(Dengine
         src/Exceptions/ComponentException.h
         src/Exceptions/SceneException.h
 
-        src/Geometry/Vector2.cpp
         src/Geometry/Vector3.h
         src/Geometry/vectors.h
         src/Geometry/Geometry.cpp
-        src/Geometry/Vector3.cpp
         src/Geometry/Vector2.h
         src/Geometry/Vector.h
         src/Geometry/Geometry.h
@@ -106,7 +104,7 @@ add_library(Dengine
 
         src/Platform/Audio/AudioManager.h
         src/Platform/Audio/AudioManager.cpp
-)
+        src/DObject.cpp)
 
 
 find_package(OpenGL REQUIRED)
