Vector3, Vector2 improvements, Number
+Vector3, Vector2 got some optimizations
+Geometry::getAngle now doesnt round to pi/2
+New class Number with equals method

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -104,7 +104,7 @@ add_library(Dengine
 
         src/Platform/Audio/AudioManager.h
         src/Platform/Audio/AudioManager.cpp
-        src/DObject.cpp)
+        src/DObject.cpp src/Geometry/Number.h)
 
 
 find_package(OpenGL REQUIRED)
