[Several changes, see full description below]
+Component and BaseComponent were merged
+Messages.h with enums which describe ScenesManager, Scene and GameObject messages
+Dengine was adapted to EventsState
+GameObject got new beta* API (not implemented now)
+Scene got new beta* API (+impl)
+SceneBehavior and BaseSceneBehavior were merged, SceneBehavior got slightly changed API
+ScenesManager has at most part old but partly new API (+impl)

------------------------------------
*beta - can be changed before this branch will be merged into develop

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,14 +6,13 @@ set(CMAKE_PREFIX_PATH lib)
 
 add_executable(App
         src/App/main.cpp
-        )
+        src/Coreutils/Messages.h)
 
 add_library(Dengine
-        src/Components/BaseComponent.cpp
+        src/Components/Component.cpp
         src/Components/TransformComponent.cpp
-        src/Components/BaseComponent.h
-        src/Components/TransformComponent.h
         src/Components/Component.h
+        src/Components/TransformComponent.h
 
         src/Dengine.cpp
         src/Dengine.h
@@ -28,8 +27,8 @@ add_library(Dengine
         src/Platform/PlatformSet.h
         src/Coreutils/ID.h
         src/SceneBehavior.h
-        src/BaseSceneBehavior.cpp
-        src/BaseSceneBehavior.h
+        src/SceneBehavior.cpp
+        src/SceneBehavior.h
 
         src/Events/Window/DefaultWindowStateBuilder.h
         src/Events/Window/DefaultWindowStateBuilder.cpp
