Filter API, GO iterators
+Filter class which supposed for iteration trough all game objects
+GameObject class got trough-children-iterator methods

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,7 @@ set(CMAKE_PREFIX_PATH lib)
 
 add_executable(App
         src/App/main.cpp
-        src/Coreutils/Messages.h)
+        src/Coreutils/Messages.h src/Filter/Filter.cpp src/Filter/Filter.h src/Filter/FilterSelection.h)
 
 add_library(Dengine
         src/Components/Component.cpp
