GameObject impl. (+several important changes)
+GameObject got implementation
+New messages: ComponentMessages
+Slightly changed API of Component
+DengineException.toString()
+GameObjectException
+Breakable filters
+Completed API of Dengine, ScenesManager and Scene
+Initializer and SceneBehavior now take game object and scene by shared_ptr

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,7 @@ set(CMAKE_PREFIX_PATH lib)
 
 add_executable(App
         src/App/main.cpp
-        )
+        src/Exceptions/GameObjectException.h)
 
 add_library(Dengine
         src/Components/Component.cpp
@@ -112,7 +112,7 @@ add_library(Dengine
 
         src/Filter/Filter.cpp
         src/Filter/Filter.h
-        )
+        src/Initializer.h)
 
 
 find_package(OpenGL REQUIRED)
